Agrego nuevo ejemplo para un "sticky footer to bottom" en el menu

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,12 @@
 .header md-toolbar md-icon.md-default-theme {
   color: white; 
   }
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
