--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,11 @@
-.header md-toolbar md-icon.md-default-theme {
-  color: white; 
-  }
+.side-menu-logo{
+  width: 240px;
+  height: 225px;
+  display: block;
+  margin: 0 auto;
+  padding-top: 55px;
+}
+
+.main-toolbar{
+  position:fixed !important;
+}
