--- a/app/views/app.html
+++ b/app/views/app.html
@@ -3,35 +3,35 @@
         
         <!-- START Top Navbar-->
         <div ng-cloak>
-            <md-content class="md-padding">
+            <md-content>
                 
-                <md-nav-bar>
+                <!--<md-nav-bar>
 
                     <md-nav-item ng-repeat="element in vm.navbarElements" md-nav-href="{{element.href}}">
                         {{element.name}}
                     </md-nav-item>
                 
-                </md-nav-bar>
+                </md-nav-bar>-->
 
-                <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
-                    <md-toolbar layout="row">
-                    <div class="md-toolbar-tools">
-                        <h2>
-                            <span>Side Panel</span>
-                        </h2>
-                        <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Close Side Panel" ng-click="vm.closeSideNavPanel()">
-                            <md-tooltip>Close Side Panel</md-tooltip>
-                            <md-icon class="material-icons">clear</md-icon>
-                        </md-button>
-                    </div>
+                <md-sidenav class="md-sidenav-left md-whiteframe-24dp" md-component-id="left">
+                    <md-toolbar layout="row" class="md-tall">
+                        <div class="md-toolbar-tools">
+                            <div class="parent" layout="column" flex>
+                                <img src="app/img/logo.png" class="side-menu-logo">
+                            </div>
+                            <span flex></span>
+                            <md-button class="md-icon-button" aria-label="Cerrar Menú" ng-click="vm.closeSideNavPanel()">
+                                <md-tooltip>Cerrar Menú</md-tooltip>
+                                <md-icon class="material-icons">clear</md-icon>
+                            </md-button>
+                        </div>
                     </md-toolbar> 
                     <md-content layout-padding="">
-                    Side navigation Panel
+                        Side navigation Panel
                     </md-content> 
                 </md-sidenav>
 
-                <md-toolbar>
+                <md-toolbar class="main-toolbar">
                     <div class="md-toolbar-tools">
                         <md-button class="md-icon-button" aria-label="Side Panel" ng-click="vm.openSideNavPanel()">
                             <md-tooltip>Open Side Panel</md-tooltip>
@@ -39,10 +39,10 @@
                         </md-button>
                         <md-button class="md-icon-button" aria-label="Icon">
                             <md-tooltip>User</md-tooltip>
-                            <md-icon class="md-default-theme" md-svg-icon="fb.svg"></md-icon>
+                            <md-icon class="md-default-theme" md-svg-icon=""></md-icon>
                         </md-button>
                         <h2>
-                            <span>Heading</span>
+                            <span></span>
                         </h2>
                         <md-input-container md-no-float class="md-accent" flex="50" style="padding-bottom:0px;margin-left:25px">
                             <md-icon style="color:wheat" class="material-icons">&#xE8B6;</md-icon>
@@ -51,33 +51,35 @@
                         <span flex></span>
                         <md-button class="md-icon-button" aria-label="User">
                             <md-tooltip>User</md-tooltip>
-                            <img src="user.png" style="width:24px;height:24px;"/>
+                            <img src="" style="width:24px;height:24px;"/>
                         </md-button>
                         <md-button class="md-icon-button" aria-label="Messages">
                             <md-tooltip>Messages</md-tooltip>
-                            <img src="messages.png" style="width:24px;height:24px;"/>
+                            <img src="" style="width:24px;height:24px;"/>
                         </md-button>
                     </div>
                 </md-toolbar>
                 
-                <br/>
+                <br/><br/><br/>
                 <div class="container-fluid">
                     <div ui-view="" autoscroll="false" ng-class="ng-fadeInUp"></div>
                 </div>
 
-                <div>
-                <br class="hidden-xs"/>
-                    <center>
-                        <span style="font-size: 16px;">
-                            {{vm.projectName}}
-                        </span>
-                        <br />
-                        <span style="font-size: 16px; font-weight: bold; opacity: 0.4;">{{vm.poweredBy}}</span>
-                        <br class="hidden-xs"/><br class="hidden-xs"/>
-                        <span style="font-size: 11px; color: #787878!important;">
-                        </span>
-                    </center>
-                </div>
+                <footer layout="row" layout-align="center">
+                    <div>
+                        <br class="hidden-xs"/>
+                        <center>
+                            <span style="font-size: 16px;">
+                                {{vm.projectName}}
+                            </span>
+                            <br />
+                            <span style="font-size: 16px; font-weight: bold; opacity: 0.4;">{{vm.poweredBy}}</span>
+                                <br class="hidden-xs"/><br class="hidden-xs"/>
+                                <span style="font-size: 11px; color: #787878!important;">
+                            </span>
+                        </center>
+                    </div>
+                </footer>
 
             </md-content>
 
