--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,12 +1,14 @@
 .header md-toolbar md-icon.md-default-theme {
   color: white; 
   }
+
 .footer {
-  position: absolute;
-  right: 0;
+  position: fixed;
   bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
+  width: 100%;
+  height: 75px;
 }
+
+
+
+
