Se corrige <md-sideNav> del menu.

--- a/app/views/app.html
+++ b/app/views/app.html
@@ -1,6 +1,6 @@
 
 <div layout="row">
-    <div layout="vertical">
+    <div layout="vertical" style="height: 100vh;">
 
         <md-sidenav class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4" flex>
             <md-toolbar class="md-medium-tall" md-colors="{background: 'pink'}">
