--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,13 +18,18 @@
 .footer-project-name{
   font-size: 16px;
 }
-.header md-toolbar md-icon.md-default-theme {
-  color: white; 
-  }
 
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 75px;
+}
+.main-header {
+  position: relative;
+  z-index: 2;
+}
+.main-sidenav {
+  position: relative;
+  z-index: 1;
 }
