--- a/app/css/style.css
+++ b/app/css/style.css
@@ -9,3 +9,27 @@
 .main-toolbar{
   position:fixed !important;
 }
+
+.footer-powered-by{
+  font-size: 16px; font-weight: bold; opacity: 0.4;
+  display: block;
+  margin: 0 auto;
+}
+.footer-project-name{
+  font-size: 16px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 75px;
+}
+.main-header {
+  position: relative;
+  z-index: 2;
+}
+.main-sidenav {
+  position: relative;
+  z-index: 1;
+}
