cambios en temas y colores

--- a/app/views/app.html
+++ b/app/views/app.html
@@ -62,13 +62,22 @@
                         {{element.name}}
                     </md-nav-item>
                 </md-nav-bar>
+
+                <md-button class="md-primary">Click me</md-button>
+                <md-button class="md-accent">or maybe me</md-button>
+                <md-button class="md-warn">Careful</md-button>
+
+                <md-button class="md-primary">Click me</md-button>
+                <md-button class="md-primary md-hue-1">Click me</md-button>
+                <md-button class="md-primary md-hue-2">Click me</md-button>
+
             </div>
 
             <div class="container-fluid" layout-padding>
                 <div ui-view="" autoscroll="false"></div>
             </div>
 
-            <footer class="footer"  md-colors="{background: 'indigo'}">
+            <footer class="footer">
                 <br/>
                 <center>
                     <span class="footer-project-name">{{vm.projectName}}</span>
