--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,9 +1,10 @@
 .side-menu-logo{
-  width: 240px;
-  height: 225px;
+  width: 215px;
+  height: 200px;
   display: block;
   margin: 0 auto;
-  padding-top: 55px;
+  padding-top: 65px;
+  padding-left: 5px;
 }
 
 .main-toolbar{
