Componente de tabulación y navegación con iconos

--- a/app/views/app.html
+++ b/app/views/app.html
@@ -39,8 +39,13 @@
                             <md-tooltip>Inicio</md-tooltip>
                             <md-icon class="material-icons" ng-click="vm.goToHome()">home</md-icon>
                         </md-button>
+
                         <h2>
-                            <span>{{vm.getNavigationRoute()}}</span>
+                            <span ng-repeat="route in vm.getNavigationRoute()">
+                                <md-icon ng-if="$index > 0" class="material-icons">keyboard_arrow_right</md-icon>
+                                {{route}}                                
+                            </span>
+                            <!--<span>{{vm.getNavigationRoute()}}</span>-->
                         </h2>
 
                         <span flex></span>
