SideNav bug fixed, agrego js tipo servicio para el modelo de empleados

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -19,12 +19,12 @@
   font-size: 16px;
 }
 
-.footer {
+/*.footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 75px;
-}
+}*/
 .main-header {
   position: relative;
   z-index: 2;
@@ -32,4 +32,35 @@
 .main-sidenav {
   position: relative;
   z-index: 1;
+}
+
+/*=========================   Estilos para el Header, footer y Content =================================================*/
+/**{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+*:after,
+*:before{
+  box-sizing: border-box;
+}*/
+
+.wrapper{
+  display: flex;
+  flex-direction: column;            
+  height: 100vh;
+  overflow: hidden;
+}
+.header{
+  flex: 0 0 auto;  
+  /*background: #aaa;*/
+}
+.content{
+  flex: 1 1 auto;     
+  overflow-y: auto;     
+  background: #f0f5f5;
+}
+.footer{
+  flex: 0 0 auto;  
+  /*background: #aaa;*/
 }
