Cambios en estilo

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -34,3 +34,9 @@
   position: relative;
   z-index: 1;
 }
+.md-sidemenu-wrapper {
+  height: 0;
+}
+.md-sidemenu-wrapper.md-active {
+  height: auto;
+}
